--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
-    SystemJS.import('aurelia-bootstrapper');
+//    System
+//        .import('aurelia-bootstrapper')
+//        .then(function (bootstrapper) {
+//            bootstrapper.bootstrap(function (aurelia) {
+//
+//                aurelia.use
+//                        .plugin('genadis/aurelia-mdl')
+//                        .standardConfiguration()
+//                        .developmentLogging();
+//
+//                aurelia.start().then(function () {
+//                    aurelia.setRoot('app', document.body);
+//                });
+//
+//            })
+//        });
+    System.import('aurelia-bootstrapper');
 </script>
 </body>
 </html>
