--- a/application/app.html
+++ b/application/app.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="./stick-top"></require>
 
     <style>
         .mdl-layout__header {
@@ -8,6 +9,7 @@
         }
         .mdl-navigation__link {
             position: relative;
+            text-transform: uppercase;
         }
         .active:before {
             content: '';
@@ -52,15 +54,16 @@
     </header>
 
     <div class="btns">
-        <button class="mdl-button mdl-js-button mdl-button--icon"
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
                 click.trigger="move(-1)">
             <i class="mdi mdi-chevron-left"></i>
         </button>
-        <button class="mdl-button mdl-js-button mdl-button--icon"
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--white"
                 click.trigger="move(1)">
             <i class="mdi mdi-chevron-right"></i>
         </button>
     </div>
+
     <div class="schedule"
          class.bind="(period === 'day' && 'schedule__days')   ||
                      (period === 'week' && 'schedule__weeks') ||
@@ -98,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="schedule__timeline">
+        <div class="schedule__timeline" stick-top>
             <div class="schedule__container"
                  class.bind="animate && 'schedule__animation'"
                  css.bind="{'transform': 'translateX(' + translateX + 'px)'}">
@@ -144,7 +147,8 @@
             <div class="schedule__row_group"
                  repeat.for="group of employersJSONArray">
                 <div class="schedule__group"
-                     repeat.for="level1 of dateArray">
+                     repeat.for="level1 of dateArray"
+                     class.bind="level1.time < 0 && 'schedule__group_past'">
                     <div class="schedule__layout">
                         <div class="schedule__row_conflict">
                             <div class="schedule__layout_cell"
@@ -154,7 +158,26 @@
                              show.bind="!group.hide"
                              repeat.for="employer of group.employers">
                             <div class="schedule__layout_cell"
-                                 repeat.for="level2 of level1"></div>
+                                 repeat.for="level2 of level1">
+                                <div class="bar"
+                                     if.bind="period !== 'day'"
+                                     class.bind="(level1.time < 0 ?
+                                                  'bar--past schedule-color__past_' + employer.colorCode :
+                                                  'schedule-color__' + employer.colorCode) + ' ' +
+                                                 (period === 'month' ? 'bar--wide' : '')">
+
+                                </div>
+                            </div>
+                            <div class="bar" style="left: 112px;width: 351px;"
+                                 if.bind="period === 'day'"
+                                 class.bind="(level1.time < 0 ?
+                                              'bar--past schedule-color__past_' + employer.colorCode :
+                                              'schedule-color__' + employer.colorCode)">
+                                <div class="bar__drag bar__drag--left mdi mdi-drag-vertical"
+                                     if.bind="level1.time >= 0"></div>
+                                <div class="bar__drag bar__drag--right mdi mdi-drag-vertical"
+                                     if.bind="level1.time >= 0"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
