--- a/html/1-schedule-day.html
+++ b/html/1-schedule-day.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app="hrportal">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="../css/index.min.css">
     <title>Schedule</title>
 
-    <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body>
 
@@ -550,6 +548,7 @@
                         <div class="schedule__layout_cell"></div>
                         <div class="schedule__layout_cell"></div>
                         <div class="bar schedule-color__25" style="left: 112px;width: 351px;">
+                            <!--<div class="bar__info">9:00  – 19:00</div>-->
                             <div class="bar__drag bar__drag--left mdi mdi-drag-vertical"></div>
                             <div class="bar__drag bar__drag--right mdi mdi-drag-vertical"></div>
                         </div>
