--- a/html/3-schedule-month.html
+++ b/html/3-schedule-month.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app="hrportal">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="../css/index.min.css">
     <title>Schedule</title>
 
-    <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body>
 
