--- a/html/5-schedule-add.html
+++ b/html/5-schedule-add.html
@@ -1,44 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app="hrportal">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="../css/index.min.css">
     <title>Schedule</title>
 
-    <!-- IE Compatibility shims -->
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js""></script>
-    <![endif]-->
-
-    <!--[if IE]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/flexie/1.0.3/flexie.min.js"></script>
-    <link href="../node_modules/material-design-lite/dist/assets/ie.css" rel="stylesheet">
-    <![endif]-->
-    <!-- end shims -->
-
-
-    <!-- Material Design Lite -->
-    <script src="../node_modules/material-design-lite/dist/material.min.js"></script>
-    <!-- Add Copy-to-CodePen buttons to code blocks -->
-    <script src="../node_modules/material-design-lite/dist/assets/codepen.js"></script>
-    <!-- Enable Prism syntax highlighting -->
-    <script src="../node_modules/material-design-lite/dist/assets/prism.js"></script>
-    <script src="../node_modules/material-design-lite/dist/assets/prism-markup.min.js"></script>
-    <script src="../node_modules/material-design-lite/dist/assets/prism-javascript.min.js"></script>
-    <script src="../node_modules/material-design-lite/dist/assets/prism-css.min.js"></script>
-    <script src="../node_modules/material-design-lite/dist/assets/prism-bash.min.js"></script>
-    <script src="../node_modules/material-design-lite/dist/assets/main.js"></script>
-    <!-- Built with love using Material Design Lite -->
-
-    <script src="../node_modules/dialog-polyfill/dialog-polyfill.js"></script>
-
-
 </head>
-<body ng-controller="mainCtrl">
+<body>
 
 <div style="background-color: #536d79; height: 69px"></div>
 
