--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/index.min.css">
     <title>HRportal</title>
 </head>
-<body aurelia-app>
+<body aurelia-app="main">
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
